argocd/manifests/llama-cpp/base/service-embeddings.yaml
apiVersion: v1
kind: Service
metadata:
  name: llama-cpp-embeddings
  namespace: llama-cpp
  labels:
    app: llama-cpp
spec:
  type: ClusterIP
  selector:
    app: llama-cpp
  ports:
    - name: embeddings
      port: 8081
      targetPort: embeddings
      protocol: TCP
