argocd/manifests/llama-cpp/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: llama-cpp
  namespace: llama-cpp
  labels:
    app: llama-cpp
spec:
  type: ClusterIP
  selector:
    app: llama-cpp
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
    - name: metrics
      port: 9090
      targetPort: metrics
      protocol: TCP
